the perfect change

--- a/cal.html
+++ b/cal.html
@@ -12,6 +12,7 @@
             <div class="calculator" >
                 
                 <form>
+                    <div class="casio" style="font-size: 30px;color: white;">Casio</div>
                     <div class="display">
                         <input type="text" name="display"/>
                     </div>
